# TradeAgent

./: .env.example  .gitignore  PRODUCTION_REVIEW.md  PROJECT.md  README.md  main.py  pyproject.toml  requirements.txt
src/trading_agent/: __init__.py  app.py
src/trading_agent/analytics/: __init__.py
src/trading_agent/config/: __init__.py  settings.py
src/trading_agent/core/: __init__.py  exceptions.py
src/trading_agent/indicators/: __init__.py
src/trading_agent/infrastructure/: __init__.py  logging.py
src/trading_agent/market/: __init__.py  client.py  models.py  protocols.py
src/trading_agent/market/candles/: __init__.py  builder.py  models.py
src/trading_agent/market/providers/alpaca/: __init__.py  config.py  mapper.py  networking.py  provider.py
src/trading_agent/notifications/: __init__.py
src/trading_agent/signals/: __init__.py
src/trading_agent/storage/: __init__.py  candle_store.py  protocols.py
tests/config/: test_settings.py
tests/market/: test_client.py  test_models.py
tests/market/candles/: test_builder.py  test_models.py
tests/market/providers/alpaca/: test_config.py  test_mapper.py
tests/storage/: test_candle_store.py
